@@ -1,26 +1,33 @@
 package com.example.demo.Service;
 
 import com.example.demo.Model.Flight;
+import com.example.demo.Model.FlightInfoEntity;
 import com.example.demo.Repository.FlightInfoRepository;
 import com.example.demo.Repository.FlightsRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
+import org.mockito.*;
+import org.mockito.internal.stubbing.answers.CallsRealMethods;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.http.MediaType;
+import org.springframework.mock.web.MockMultipartFile;
 
 import java.io.IOException;
+import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.lenient;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class FlightsServiceTest {
@@ -29,6 +36,8 @@ class FlightsServiceTest {
     private FlightsRepository base_rep;
     @Mock
     private FlightInfoRepository info_rep;
+    @Mock
+    private FlightConverterUtilsImpl fileConverter;
     @InjectMocks
     private FlightsServiceImpl service;
 
@@ -42,43 +51,65 @@ class FlightsServiceTest {
 
     @BeforeEach
     void setUp() {
+        MockitoAnnotations.initMocks(this);
         Page<Flight> lst = FlightsList();
         lenient().when(base_rep.getAllFlightsOrderedById(null)).thenReturn(lst);
         lenient().when(base_rep.findById(1L)).thenReturn(Optional.ofNullable(lst.getContent().get(0)));
         lenient().when(base_rep.findById(2L)).thenReturn(Optional.ofNullable(lst.getContent().get(1)));
         lenient().when(base_rep.findById(3L)).thenReturn(Optional.ofNullable(lst.getContent().get(2)));
-        lenient().when(service.getFlights("", "", null)).thenReturn(lst);
     }
 
     @Test
     void updateExistingFlight(){
         lenient().when(base_rep.checkIfNodeExist("oman", "brazilia", null)).thenReturn(Arrays.asList());
         Flight upd = new Flight(1L, "oman", "brazilia", null);
-        boolean added = service.updateFlight(1L, upd.getDeparture(), upd.getDestination(), null);
+        MockMultipartFile file
+                = new MockMultipartFile(
+                "file",
+                "test.txt",
+                MediaType.TEXT_PLAIN_VALUE,
+                "Multipart file test".getBytes()
+        );
+        Mockito.doNothing().when(fileConverter).createFileLocal(file);
+        boolean added = service.updateFlight(1L, upd.getDeparture(), upd.getDestination(), file);
         assertEquals(added, true);
     }
 
     @Test
     void updateNotExistingFlight(){
-        lenient().when(base_rep.checkIfNodeExist("omana", "brazilia", null)).thenReturn(Arrays.asList(
-                new Flight("omana", "brazilia", null)
-        ));
-        Flight upd = new Flight(1L, "omana", "brazilia", null);
-        boolean added = service.updateFlight(1L, upd.getDeparture(), upd.getDestination(), null);
+        MockMultipartFile file
+                = new MockMultipartFile(
+                "file",
+                "test.txt",
+                MediaType.TEXT_PLAIN_VALUE,
+                "Multipart file test".getBytes()
+        );
+        lenient().when(base_rep.checkIfNodeExist("oman", "brazil", file.getOriginalFilename())).
+                thenReturn(List.of(new Flight("oman", "brazil", file.getOriginalFilename())));
+        Flight upd = new Flight(1L, "oman", "brazil", file.getOriginalFilename());
+        boolean added = service.updateFlight(1L, upd.getDeparture(), upd.getDestination(), file);
         assertEquals(added, false);
     }
 
     @Test
     void getFlights() {
-        lenient().when(base_rep.findByDepartureLike("minsk", null)).
+        Flight fl = new Flight(1L, "minsk", "moscow",null);
+        Flight fl2 = new Flight(2L, "minsk", "berlin",null);
+        Flight fl3 = new Flight(3L, "istanbul", "moscow",null);
+        lenient().when(info_rep.findAllExpNotes(1L, null)).
                 thenReturn(new PageImpl<>(Arrays.asList(
-                    new Flight("minsk", "moscow", null),
-                    new Flight("minsk", "berlin", null))));
+                        new FlightInfoEntity("ad", 1, 1, LocalDateTime.now(), fl))));
+        lenient().when(info_rep.findAllExpNotes(2L, null)).
+                thenReturn(new PageImpl<>(Arrays.asList(
+                        new FlightInfoEntity("ad", 1, 1, LocalDateTime.now(), fl2))));
+        lenient().when(info_rep.findAllExpNotes(3L, null)).
+                thenReturn(new PageImpl<>(Arrays.asList(
+                        new FlightInfoEntity("ad", 1, 1, LocalDateTime.now(), fl3))));
 
+        lenient().when(base_rep.findByDepartureLike("minsk", null)).
+                thenReturn(new PageImpl<>(Arrays.asList(fl, fl2)));
         lenient().when(base_rep.findByDestinationLike("moscow", null)).
-                thenReturn(new PageImpl<>(Arrays.asList(
-                    new Flight("krakow", "moscow", null),
-                    new Flight("minsk", "moscow", null))));
+                thenReturn(new PageImpl<>(Arrays.asList(fl, fl2, fl3)));
 
         Page<Flight> ls = service.getFlights("minsk", null, null);
         assertEquals(ls.getContent().size(), 2);
@@ -90,25 +121,47 @@ class FlightsServiceTest {
         assertEquals(ls.getContent().get(0).getDestination(), "istanbul");
     }
 
-//    @Test
-//    void canSaveFlight(){
-//        Flight fl = new Flight("istanbul", "moscow",null);
-//        lenient().when(base_rep.findByDepartureLike("istanbul", null)).
-//                thenReturn(new PageImpl<>(Arrays.asList(fl)));
-//        lenient().when(base_rep.findByDepartureLike("moscow", null)).
-//                thenReturn(new PageImpl<>(Arrays.asList()));
-//        boolean added = service.saveFlight(fl.getDeparture(), fl.getDestination(), null);
-//        assertTrue(added);
-//    }
+    @Test
+    void canSaveFlight(){
+        Flight fl = new Flight(1L, "istanbul", "moscow",null);
+        lenient().when(base_rep.findByDepartureLike("istanbul", null)).
+                thenReturn(new PageImpl<>(Arrays.asList(fl)));
+        lenient().when(base_rep.findByDestinationLike("moscow", null)).
+                thenReturn(new PageImpl<>(Arrays.asList()));
+        lenient().when(info_rep.findAllExpNotes(1L, null)).
+                thenReturn(new PageImpl<>(Arrays.asList(
+                        new FlightInfoEntity("ad", 1, 1, LocalDateTime.now(), fl))));
+        MockMultipartFile file
+                = new MockMultipartFile(
+                "file",
+                "test.txt",
+                MediaType.TEXT_PLAIN_VALUE,
+                "Multipart file test".getBytes()
+        );
+        Mockito.doNothing().when(fileConverter).createFileLocal(file);
+        boolean added = service.saveFlight(fl.getDeparture(), fl.getDestination(), file);
+        assertTrue(added);
+    }
 
     @Test
     void canNotSaveFlight(){
-        Flight fl = new Flight("london", "berlin", null);
-        lenient().when(base_rep.findByDepartureLike("london", null)).
+        Flight fl = new Flight(1L, "istanbul", "moscow",null);
+        lenient().when(base_rep.findByDepartureLike("istanbul", null)).
                 thenReturn(new PageImpl<>(Arrays.asList(fl)));
-        lenient().when(base_rep.findByDestinationLike("berlin", null)).
+        lenient().when(base_rep.findByDestinationLike("moscow", null)).
                 thenReturn(new PageImpl<>(Arrays.asList(fl)));
-        boolean added = service.saveFlight(fl.getDeparture(), fl.getDestination(), null);
+        lenient().when(info_rep.findAllExpNotes(1L, null)).
+                thenReturn(new PageImpl<>(Arrays.asList(
+                        new FlightInfoEntity("ad", 1, 1, LocalDateTime.now(), fl))));
+        MockMultipartFile file
+                = new MockMultipartFile(
+                "file",
+                "test.txt",
+                MediaType.TEXT_PLAIN_VALUE,
+                "Multipart file test".getBytes()
+        );
+        Mockito.doNothing().when(fileConverter).createFileLocal(file);
+        boolean added = service.saveFlight(fl.getDeparture(), fl.getDestination(), file);
         assertFalse(added);
     }
 }
